
0.1.8
 - Fixed isResolved(null) and isResolved(undefined) [issue #9]
 - Fixed a problem with the Object.create shim

0.1.7
 - shimmed ES5 Object.create in addition to Object.freeze
   for compatibility on non-ES5 engines (gozala)

0.1.6
 - Q.isResolved added
 - promise.valueOf() now returns the value of resolved
   and near values
 - asap retried
 - promises are frozen when possible

0.1.5
 - fixed dependency list for Teleport (gozala)
 - all unit tests now pass (gozala)

0.1.4
 - added support for Teleport as an engine (gozala)
 - simplified and updated methods for getting internal
   print and enqueue functions universally (gozala)

0.1.3
 - fixed erroneous link to the q module in package.json

0.1.2
 - restructured for overlay style package compatibility

0.1.0
 - removed asap because it was broken, probably down to the
   philosophy.

0.0.3
 - removed q-util
 - fixed asap so it returns a value if completed

0.0.2
 - added q-util

0.0.1
 - initial version
